# Python-Gcode_to_printer

./: .gitignore  GcodeToPath.py  LivePlotting.py  README.md  Time Trajectories.py  accel_curves.py  dualStage-gcode gen.code-workspace  minitests.py  plotting.py  pyproject.toml  testing.py  testing_accel.py
gcode/: 1-Cube.gcode  testing.gcode
