[project]
name = "DualStagePrinting"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Noah", email = "westnoahb@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"

[tool.pdm]
distribution = false
